--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
 }
 html{
   scroll-behavior: smooth;
+  /* overflow: hidden; */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -34,10 +35,14 @@ width: 100vw;
   top: 0;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+  z-index: 2;
 }
 .hero-section
 {
   height: 100%;
+}
+.swiper{
+  z-index: 1;
 }
 
 /* #vid{
@@ -52,35 +57,30 @@ width: 100vw;
   height: 100%;
   top: 0;
 }
-.test{
-  color: red;
-}
-.test:hover{
-  color: white;
-}
 .about-gfg{
   color: white;
-  background-color: rgba(166, 216, 184, 0.15);
+  background-color: rgba(60, 61, 61, 0.5);
   /* background-color: rgb(166, 216, 184); */
 }
 .footer{
   color: white;
-  background-color: rgba(116, 123, 123, 0.4);
+  background-color: rgba(29, 28, 28, 0.8);
 }
 .footer-logo{
   height: 100% !important;
 }
 
 .gfg-gradient{
-  background-image: linear-gradient(43deg,#104a20 0%,#44915b 46%,#b5e6c4 100%);
+  background-image: linear-gradient(43deg,#ffffff 0%,#276e3d 33%,#b1c9b8 66%,#ffffff 100%);
   -webkit-background-clip: text;
   color: transparent;
+  /* color: white; */
   font-weight: 900 !important;
-  font-size: 40px;
+  font-size: 60px;
 }
 
 .card{
-  background-color: rgba(160, 227, 164, 0.4);
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .dash{
@@ -88,142 +88,262 @@ width: 100vw;
   width: 400px;
   background: rgb(176, 166, 166);
 }
+#side-nav{
+  transition: all 0.5s ease-in-out;
+  z-index: 4;
+  height: 100%;
+  background-color: rgba(25, 27, 27, 1);
+  position: fixed;
 
+}
+.about-text{
+  text-align: center;
+  text-justify: inter-word;
+}
 @property --timer {
   syntax: '<integer>';
   inherits: false;
   initial-value: 1;
 }    
+.register{
+  color: #58fb42;
+        text-shadow: 0 0 3vw #F40A35;
+        animation: glow 1.2s ease infinite;
+        -moz-animation: glow 1.2s ease infinite;
+        -webkit-animation: glow 1.2s ease infinite;
+}
+@keyframes glow {
+  0%,
+  100% {
+    text-shadow: 0 0 1vw #3cf716, 0 0 3vw #178406, 0 0 10vw #108818, 0 0 10vw #1aff00, 0 0 .4vw #30f644, .5vw .5vw .1vw #1fcf1f;
+    color: #ffffff;
+  }
+  50% {
+    text-shadow: 0 0 .5vw #ffffff, 0 0 1.5vw #ffffff, 0 0 5vw #ffffff, 0 0 5vw #ffffff, 0 0 .2vw #f0f0f0, .5vw .5vw .1vw #38ac24;
+    color: #ffffff;
+  }
+}
 
+/* **********************Background*************** */
 :root { background-color: rgb(0, 0, 0); font-family: poppins; }
 
-.l00 { left: calc(100% + 20px); }
-.l05 { left: 05%; }
-.l10 { left: 10%; }
-.l15 { left: 15%; }
-.l20 { left: 20%; }
-.l25 { left: 25%; }
-.l30 { left: 30%; }    
-.l35 { left: 35%; }
-.l40 { left: 40%; }
-.l45 { left: 45%; }
-.l50 { left: 50%; }
-.l55 { left: 55%; }
-.l60 { left: 60%; }
-.l65 { left: 65%; }
-.l70 { left: 70%; }
-.l75 { left: 75%; }
-.l80 { left: 80%; }
-.l85 { left: 85%; }
-.l90 { left: 90%; }
-.l95 { left: 95%; }
-.l100 { left: calc(100% - 20px); }
-
-
-.t200 { top: -400px; }
-.t500 { top: -500px; }
-.t180 { top: -680px; }
-.t700 { top: -700px; }
-.t800 { top: -800px; }
-.t900 { top: -900px; }
-.t300 { top: -300px; }    
-.t400 { top: -400px; }    
-.t250 { top: -250px; }    
-.t320 { top: -320px; }    
-.t190 { top: -690px; }    
-.t520 { top: -520px; }    
-.t380 { top: -680px; }    
-.t400 { top: -800px; }    
-.t600 { top: -600px; }    
-.t650 { top: -650px; }    
-.t290 { top: -790px; }    
-.t530 { top: -730px; }    
-.t420 { top: -720px; }    
-.t310 { top: -410px; }
-
-
-.big div {
-  width: 40px!important;        
-  height: 500px!important;
-  font-size: 24px!important;
-  color: #008000!important;
-}
-
-.letter {
-  position: absolute;
-  background-color: black;
-  counter-reset: timer-1 calc(var(--timer) + 9) timer-2 calc(var(--timer) + 8) timer-3 calc(var(--timer) + 7) timer-4 calc(var(--timer) + 6) timer-5 calc(var(--timer) + 5) timer-6 calc(var(--timer) + 4) timer-7 calc(var(--timer) + 3) timer-8 calc(var(--timer) + 2) timer-9 calc(var(--timer) + 1) timer-10 calc(var(--timer) + 0);
-  animation: animate-letter 2s linear infinite running, animate-rotate 1s linear infinite running, animate-position 7s linear infinite running;
-}
-
-.d2{
-animation-delay: 1.5s;
-}
-
-.letter div {
-  width: 20px;
-  height: 140px;
-  font-size: 12px;
-  color: #002e00;
-}
-
-.letter div:before {
-  position: absolute;
-  filter: brightness(5) blur(1px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  content: counter(timer-1, lower-alpha) counter(timer-2, lower-alpha) counter(timer-3, lower-alpha) counter(timer-4, lower-alpha) counter(timer-5, lower-alpha) counter(timer-6, lower-alpha) counter(timer-7, lower-alpha) counter(timer-8, lower-alpha) counter(timer-9, lower-alpha) counter(timer-10, lower-alpha);
-  writing-mode: vertical-rl;
-  text-orientation: upright;
-}
-
-.letter div:after {
-  position: absolute;
-  content: counter(timer-1, lower-alpha);
-  color: white;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  background: linear-gradient(180deg, black, transparent);
-  writing-mode: vertical-rl;
-  text-orientation: upright;
-}
-
-@keyframes animate-letter {
-  to {
-      --timer: 16;
-  }
-}
-
-@keyframes animate-rotate {
-  to {
-      transform: rotateY(180deg);
-  }
-}
-
-@keyframes animate-position {
-  to {
-      top: calc(100% + 40px);
-  }
-}
+/* *********************************************** */
 
 .App {
 	font-family: sans-serif;
-	font-weight: 500;
-	font-size: 30px;
+	font-weight: 800;
+	font-size: 34px;
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  color: rgb(90, 171, 90);
-	/* min-height: 100vh; */
-	/* background: green; */
+  color: rgb(255, 255, 255);
+
+}
+#Matrix{
+  position: fixed;
+}
+.copyright{
+  background-color: rgba(29, 28, 28, 0.8);
 }
 
-.section-card:hover{
-  background-color: red;
+/* for responsiveness */
+@media only screen and (max-width: 1300px){
+  .sponsor-main-title{
+    font-size: 40px;
+  }
+  .dash{
+    width: 300px;
+  }
+  .about-text{
+    font-size: 22px;
+  }
+  .nav-link{
+    margin: 0 2rem;
+  }
+  .section-card{
+    width: 75%;
+  }
+ 
+}
+@media only screen and (max-width: 1300px){
+  .nav-link{
+    margin: 0 1.5rem;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .hero-image-container{
+    height: 45%;
+  }
+  .about-text{
+    font-size: 20px !important;
+  }
+  .about-title{
+    font-size: 40px;
+  }
+  .sponsor-main-title{
+    font-size: 35px;
+  }
+  .footer-inner{
+    height: 200px;
+  }
+  .footer-title{
+    font-size: 25px;
+  }
+  .section-card{
+    width: 75%;
+  }
+}
+
+@media only screen and (max-width: 960px){
+  .swiper{
+    width: 70%;
+  }
+  .dash{
+    width: 220px;
+  }
+  .hero-image-container{
+    height: 39%;
+  }
+  .section-card{
+    width: 75%;
+  }
+}
+@media only screen and (max-width: 850px){
+  .sponsor-card{
+    flex-direction: column;
+    align-items: center;
+  }
+  .card{
+    margin: 2rem 0;
+  }
+  .footer-item{
+    font-size: 15px;
+  }
+  .footer-title{
+    font-size: 20px;
+  }
+  .section-card{
+    width: 75%;
+  }
+}
+@media only screen and (max-width: 800px){
+  .dash{
+    display: none;
+  }
+  .sponsor-type{
+    margin: 1rem 0
+  }
+  .section-card{
+    width: 75%;
+  }
+}
+@media only screen and (max-width: 750px){
+  .nav-link{
+    display: none;
+  }
+  .menu-icon{
+    display: block;
+  }
+  .nav-wrapper{
+    justify-content: end;
+    padding-right: 40px;
+    font-size: 25px;
+  }
+  .sidebar-nav-link{
+    margin: 2rem 0;
+    font-size: 20px;
+  }
+  .about-title{
+    font-size: 30px;
+  }
+  .sponsor-main-title{
+    font-size: 28px;
+  }
+  .section-card{
+    width: 75%;
+  }
+}
+
+@media only screen and (max-width: 700px){
+  .hero-image-container{
+    height: 30%;
+  }
+  .section-card{
+    width: 75%;
+  }
+}
+@media only screen and (max-width: 650px){
+.App{
+  font-size: 25px;
+}
+.footer-title{
+  font-size: 20px;
+}
+.footer-item{
+  font-size: 12px;
+}
+.footer-social-icons{
+  font-size: 35px;
+}
+.footer-logo{
+  display: none;
+}
+.sponsor-main-title{
+  font-size: 25px;
+}
+.section-card{
+  width: 80%;
+}
+}
+
+
+@media only screen and (max-width: 600px){
+.sponsor-main-title{
+  flex-direction: column;
+  align-items: center;
+  font-size: 32px;
+}
+.section-card{
+  width: 85%;
+}
+
+}
+
+
+@media only screen and (max-width: 500px){
+  .hero-image-container{
+    height: 40%;
+  }
+  .footer{
+    height: 50%;
+  }
+  .footer-title{
+    font-size: 30px;
+    font-weight: 900;
+  }
+  .footer-item{
+    font-size: 20px;
+    text-align: center;
+  }
+  .footer-inner{
+    flex-direction: column;
+    height: 100%;
+    
+  }
+  .footer-block{
+    align-items: center;
+  }
+  .section-card{
+    width: 85%;
+  }
+}
+@media only screen and (max-width: 500px){
+  .register{
+    font-size: 40px !important;
+  }
+  .about-text{
+    padding: 13px 13px;
+    font-size: 16px !important;
+  }
 }
