--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,9 @@ html{
   scroll-behavior: smooth;
   /* overflow: hidden; */
 }
-
+.main img{
+  height: 160px;
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
