--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -621,7 +621,7 @@ body {
     height: 50%;
   }
   .footer-title {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 900;
   }
   .footer-item {
@@ -630,7 +630,7 @@ body {
   }
   .footer-inner {
     flex-direction: column;
-    height: 100%;
+    height: 90%;
   }
   .footer-block {
     align-items: center;
@@ -666,6 +666,10 @@ body {
 
   .dollar{
     font-size: 40px;
+  }
+  .footer-title {
+    font-size: 20px;
+    font-weight: 900;
   }
   
 }
